fix to text align of the figcaption

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -176,7 +176,7 @@ aside p{
 figcaption {
     background-color:#f5edd7;
     font-size: .75rem;
-    text-align: center;
+    text-align: left;
     margin: 0;
 }
 
